--- a/src/Auth/authbody.css
+++ b/src/Auth/authbody.css
@@ -4,6 +4,7 @@
   align-items: center !important;
   justify-content: center !important;
   height: 100vh !important;
+  font-family: Arial, Helvetica, sans-serif !important;
 }
 
 .form-container {
