--- a/src/pages/sidebar/Sidebar.css
+++ b/src/pages/sidebar/Sidebar.css
@@ -113,6 +113,7 @@
   z-index: 1000;
   display: flex;
   flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .notificationSidebar .closeButton {
