--- a/src/pages/sidebar/Sidebar.css
+++ b/src/pages/sidebar/Sidebar.css
@@ -249,27 +249,32 @@
   padding: 15px !important;
   margin-top:10px !important ;
   border-radius: 5px !important;
+  color: #ffffff !important;
+}
+
+.menuItem:hover {
+  background-color: rgba(6, 159, 125, 0.1) !important;
+  color: #DFFA60 !important;
 }
 
 .active-menu-item {
   padding: 15px !important;
   margin-top:10px !important ;
   background-color: #069f7e !important;
-  color: #f2f5fc !important;
+  color: #DFFA60 !important;
   border-radius: 5px !important;
 }
 
 .barbody {
-  background: #1E3232;
-  color: #ffffff;
-  height: 100vh;
+  background: #212B36;
   width: 280px;
+  height: 100vh;
   position: fixed;
   left: 0;
   top: 0;
-  z-index: 1000;
+  padding: 24px 20px;
   overflow-y: auto;
-  padding: 24px;
+  z-index: 1001;
 }
 
 /* Notification Icon Styles */
@@ -465,12 +470,13 @@
 
 .menuItem:hover {
   background: rgba(6, 159, 125, 0.1) !important;
+  color: #DFFA60 !important;
   opacity: 1;
 }
 
 .active-menu-item {
   background: #069F7D !important;
-  color: #ffffff !important;
+  color: #DFFA60 !important;
   opacity: 1;
 }
 
